--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,7 +12,7 @@ default:
   twitter:                                           # OPTIONAL: used in the about page
   linkedin:      minhphongvn                         # OPTIONAL: used in the about page
   xing:                                              # OPTIONAL: used in the about page
-  github:        minhphonvn                           # OPTIONAL: used in the about page
+  github:        minhphongvn                           # OPTIONAL: used in the about page
   stackoverflow: 4013571                             # OPTIONAL: used in the about page
   facebook:                                          # OPTIONAL: used in the about page
   gplus:                                             # OPTIONAL: used in the about page
